--- a/src/main/resources/META-INF/spring-jedis.properties
+++ b/src/main/resources/META-INF/spring-jedis.properties
@@ -1,6 +1,6 @@
-sso.redis.host=192.168.11.117
+sso.redis.host=127.0.0.1
 sso.redis.port=6379
-sso.redis.password=ruhnn1818
+sso.redis.password=123456
 sso.redis.minIdle=10
 sso.redis.maxIdle=300
 sso.redis.maxWaitMillis=1000
